<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rosidlcpp_generator_py</name>
  <version>0.4.0</version>
  <description>Generate the ROS interfaces in Python.</description>

  <maintainer email="tony.welte@gmail.com">Anthony Welte</maintainer>

  <license>Apache License 2.0</license>

  <build_depend>rosidl_runtime_c</build_depend>

  <depend>nlohmann-json-dev</depend>
  <depend>fmt</depend>
  <depend>rosidlcpp_parser</depend>
  <depend>rosidlcpp_generator_core</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_export_depend>rmw</build_export_depend>

  <buildtool_export_depend>ament_cmake</buildtool_export_depend>
  <buildtool_export_depend>ament_index_python</buildtool_export_depend>
  <buildtool_export_depend>python_cmake_module</buildtool_export_depend>
  <buildtool_export_depend>rosidl_generator_c</buildtool_export_depend>
  <buildtool_export_depend>rosidl_pycommon</buildtool_export_depend>
  <buildtool_export_depend>rosidl_typesupport_c</buildtool_export_depend>
  <buildtool_export_depend>rosidl_typesupport_interface</buildtool_export_depend>

  <member_of_group>rosidl_generator_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
