<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rosidlcpp_typesupport_introspection_c</name>
  <version>0.4.0</version>
  <description>
    Generate the message type support for dynamic message construction in C.
  </description>

  <maintainer email="tony.welte@gmail.com">Anthony Welte</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend condition="$ROS_DISTRO == 'jazzy'">ament_cmake_ros</buildtool_depend>
  <buildtool_depend condition="$ROS_DISTRO >= 'kilted'">ament_cmake_ros_core</buildtool_depend>

  <!-- To use ROS_DISTRO in CMakeLists.txt -->
  <build_depend>ros_environment</build_depend>

  <depend>nlohmann-json-dev</depend>
  <depend>fmt</depend>
  <depend>rosidlcpp_parser</depend>
  <depend>rosidlcpp_generator_core</depend>

  <build_export_depend>rosidl_cmake</build_export_depend>
  <build_export_depend>rosidl_runtime_c</build_export_depend>
  <build_export_depend>rosidl_typesupport_interface</build_export_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>rosidl_cli</exec_depend>
  <exec_depend>rosidl_generator_c</exec_depend>
  <exec_depend>rosidl_parser</exec_depend>
  <exec_depend>rosidl_pycommon</exec_depend>

  <member_of_group>rosidl_generator_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
