<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rosidlcpp_generator_c</name>
  <version>0.3.0</version>
  <description>Generate the ROS interfaces in C.</description>

  <maintainer email="tony.welte@gmail.com">Anthony Welte</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend condition="$ROS_DISTRO == 'jazzy'">ament_cmake_ros</buildtool_depend>
  <buildtool_depend condition="$ROS_DISTRO >= 'kilted'">ament_cmake_ros_core</buildtool_depend>

  <!-- To use ROS_DISTRO in CMakeLists.txt -->
  <build_depend>ros_environment</build_depend>

  <buildtool_export_depend>ament_cmake_core</buildtool_export_depend>

  <depend>nlohmann-json-dev</depend>
  <depend>fmt</depend>
  <depend>rosidlcpp_parser</depend>
  <depend>rosidlcpp_generator_core</depend>

  <build_export_depend>rosidl_cmake</build_export_depend>
  <build_export_depend>rosidl_generator_type_description</build_export_depend>
  <build_export_depend>rosidl_typesupport_interface</build_export_depend>
  <build_export_depend>rcutils</build_export_depend>

  <member_of_group>rosidl_generator_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
