<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rosidlcpp_generator_type_description</name>
  <version>0.3.0</version>
  <description>Generate hashes and descriptions of ROS 2 interface types, per REP-2011.</description>

  <maintainer email="tony.welte@gmail.com">Anthony Welte</maintainer>

  <license>Apache License 2.0</license>

  <!-- Used in the CMakeLists.txt of this package and only needed by CMake-->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <buildtool_export_depend>ament_cmake_core</buildtool_export_depend>

  <depend>nlohmann-json-dev</depend>
  <depend>fmt</depend>
  <depend>rosidlcpp_parser</depend>
  <depend>rosidlcpp_generator_core</depend>
  <depend>rcutils</depend>
  <depend>rosidl_runtime_c</depend>

  <member_of_group>rosidl_generator_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
