<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rosidlcpp_parser</name>
  <version>0.3.0</version>
  <description>This package provides utilities to parse idl files into a json data structure</description>
  <maintainer email="tony.welte@gmail.com">Anthony Welte</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>nlohmann-json-dev</build_depend>
  <build_depend>fmt</build_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
